<resources>
    <string name="app_name">Popular Movies</string>
    <string name="tmdb_notice">This product uses data from TMDb API (The Movie Database API) but is not endorsed or certified by TMDb.</string>
    <string name="tmdb_official_link">https://www.themoviedb.org/</string>
    <string name="tmdb_branding_reference">The Movie Database</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="warning_no_movies_found">Ops! We did not find any movie.</string>
    <string name="no_movies_found_image">No movies found image</string>
    <string name="most_popular">Popular</string>
    <string name="highest_rated">Top Rated</string>
    <string name="min">min</string>
    <string name="slash">\u0020/\u0020</string>
    <string name="movie_details_could_not_be_loaded">Movie details could not be loaded.</string>
    <string name="warning_you_are_not_connected">You are not connected!</string>
    <string name="movie_backdrop_image">Movie Backdrop Image</string>
    <string name="original_title_label">Original Title:\u0020</string>
    <string name="spoken_languages_label">Spoken Languages:\u0020</string>
    <string name="popularity_label">Popularity:\u0020</string>
    <string name="budget_label">Budget:\u0020</string>
    <string name="revenue_label">Revenue:\u0020</string>
    <string name="homepage">HOMEPAGE</string>
    <string name="production_companies">Production Companies</string>
    <string name="share_to">Share to…</string>
    <string name="warning_homepage_not_available">Ops! Homepage not available for this movie. Sorry!…</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="warning_check_internet_connection">Please, check your internet connection!</string>
    <string name="you_are_at_page_1">You are at page 1</string>
    <string name="page">Page\u0020</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="you_do_not_have_any_bookmarks">Ops! No bookmarks here…</string>
    <string name="navigate_to_bookmarks">Let\'s add some bookmarks!</string>
    <string name="movie_removed">Movie removed from bookmarks</string>
    <string name="movie_saved">Movie saved to bookmarks</string>
    <string name="no_bookmarks_in_the_database">No bookmarks in the database</string>
    <string name="see_movies">SEE MOVIES</string>
    <string name="preferences">Preferences</string>
    <string name="author">Author:</string>
    <string name="comment_url_not_available">Comment url not available!</string>
    <string name="no_videos_available_for_this_movie">No videos available for this movie</string>
    <string name="languages_label">Languages:\u0020</string>
    <string name="delete_movie_bookmark_item">Delete this movie from bookmarks?</string>
    <string name="delete_all_bookmarks">Delete All Bookmarks</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_deleted_bookmarks">\u0020 bookmarks deleted.</string>
    <string name="warning_could_not_be_removed">Ops! Could not be removed!</string>
    <string name="warning_could_not_be_saved">Ops! Could not be saved!</string>
    <string name="yes_delete">Yes, Delete.</string>
    <string name="no_cancel">No, Cancel.</string>
    <string name="warning_delete_all_bookmarks">This action will delete all saved movie bookmarks. This action can not be undone. Are you sure?</string>
    <string name="youtube">YouTube</string>
    <string name="share">SHARE</string>
    <string name="vertical_text_divider" translatable="false">|</string>
    <string name="movie_details">Movie Details</string>
    <string name="offline_database">Offline Database</string>
    <string name="checkout_this_movie">Checkout this movie…</string>
    <string name="movie_homepage">Movie Homepage</string>
    <string name="read_more">MORE…</string>
    <string name="web">Web</string>
    <string name="hide">HIDE</string>
    <string name="warning_device_can_not_play_video">Sorry, your device does not have support to play this video. \nPlease, try in a real device.</string>
    <string name="video_site_youtube" translatable="false">YouTube</string>
    <string name="warning_only_youtube_supported">App supports YouTube videos only.</string>
    <string name="unavailable">Unavailable</string>
    <string name="details">Details</string>
    <string name="reviews">Reviews</string>
    <string name="videos">Videos</string>
    <string name="slash_videos" translatable="false">/videos</string>
    <string name="slash_reviews" translatable="false">/reviews</string>
    <string name="warning_no_videos">Ops! There is no videos available for this movie.</string>
    <string name="warning_no_details">Ops! There is no details available for this movie.</string>
    <string name="warning_no_reviews">Ops! This movie has no reviews yet.</string>
    <string name="warning_no_companies">Ops! There is companies available for this movie</string>
    <string name="no_info_available">No info available</string>
    <string name="open_in_the_browser">Open in Browser</string>
    <string name="movie_video">Movie Video</string>
    <string name="movie_video_play_button">Movie Video Play Button</string>
    <string name="deleted">Deleted</string>
    <string name="canceled">Canceled</string>
    <string name="watched">Movie is set as watched</string>
    <string name="not_watched">Movie is set as not watched</string>
    <string name="search">Search</string>
    <string name="watched_flag">WATCHED</string>
    <string name="show_watched_only">Show Watched Only</string>
    <string name="show_unwatched_only">Show Unwatched Only</string>
    <string name="show_all_bookmarks">Show All Bookmarks</string>
    <string name="showing_watched_only">Showing Watched Only</string>
    <string name="showing_unwatched_only">Showing Unwatched Only</string>
    <string name="showing_all_bookmarks">Showing All</string>
    <string name="tab_all">ALL</string>
    <string name="tab_watched">WATCHED</string>
    <string name="tab_unwatched">UNWATCHED</string>
    <string name="the_movie_database" translatable="false">The Movie Database - TMDb</string>

    <!-- USED BY PREFERENCES - START -->
    <string name="settings">Settings</string>
    <!-- Preference Adult Content -->
    <string name="pref_show_adult_label">Adult content</string>
    <string name="pref_show_adult_key" translatable="false">show_adult</string>
    <string name="pref_show_adult_true" translatable="false">Shown</string>
    <string name="pref_show_adult_false" translatable="false">Hidden</string>
    <!-- USED BY PREFERENCES - END -->
    <string name="close">Close</string>
    <string name="more">MORE</string>
    <string name="more_details">More details</string>
    <string name="full_details">Full Details</string>
    <string name="load_more">Load more</string>
    <string name="_1" translatable="false">1</string>
    <string name="page_1">Page 1</string>
    <string name="no_bookmarks_to_show">No bookmarks to show</string>
    <string name="no_more_bookmarks_to_show">No more bookmarks to show</string>
</resources>
