<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="4dp"
                android:src="@drawable/powered_by_square_green"
                android:contentDescription="@string/tmdb_branding_reference" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <TextView
                style="@style/FooterText"
                android:text="@string/tmdb_notice"/>
            <TextView
                style="@style/FooterText"
                android:autoLink="web"
                android:text="@string/tmdb_official_link"/>
        </LinearLayout>

</LinearLayout>