<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/medium_layout_margin"
        app:cardCornerRadius="3dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_video_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_layout_margin"
                android:gravity="center"
                android:maxLines="2"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Mission Impossible - Fallout" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_layout_margin"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_video_type"
                    style="@style/textVideoInfo"
                    tools:text="Clip"/>
                <TextView
                    style="@style/textVideoInfo"
                    android:text="@string/vertical_text_divider"/>
                <TextView
                    android:id="@+id/tv_video_site"
                    style="@style/textVideoInfo"
                    tools:text="YouTube"/>
                <TextView
                    style="@style/textVideoInfo"
                    android:text="@string/vertical_text_divider"/>
                <TextView
                    android:id="@+id/tv_video_size"
                    style="@style/textVideoInfo"
                    tools:text="1080"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium_layout_margin">

                <ImageView
                    android:id="@+id/iv_movie_video_poster"
                    android:layout_width="320dp"
                    android:layout_height="180dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/medium_layout_margin"
                    android:layout_marginRight="@dimen/medium_layout_margin"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:elevation="2dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/video_poster_place_holder"
                    android:visibility="visible"
                    android:contentDescription="@string/movie_video" />

                <ImageView
                    android:id="@+id/iv_movie_video_play_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@android:drawable/dialog_holo_light_frame"
                    android:backgroundTint="@color/colorAccentAlpha200"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_play_arrow"
                    android:visibility="visible"
                    android:contentDescription="@string/movie_video_play_button" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/bt_see_on_youtube"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/small_layout_margin"
                    android:text="@string/youtube"
                    android:textColor="@color/colorYouTube"
                    android:textSize="14sp"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/bt_share_youtube_url"
                    style="@style/Base.Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/small_layout_margin"
                    android:text="@string/share"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>