<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MovieDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container_layout_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_original_title"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorAccent"
                android:elevation="12dp"
                android:gravity="center_vertical"
                android:paddingEnd="0dp"
                android:paddingStart="@dimen/default_layout_margin"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="Original Title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_layout_margin"
                android:layout_marginLeft="@dimen/default_layout_margin"
                android:layout_marginRight="@dimen/default_layout_margin"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="154dp"
                        android:layout_height="231dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:background="@android:drawable/dialog_holo_light_frame"
                        android:contentDescription="@string/movie_poster"
                        android:elevation="2dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/poster_image_place_holder"
                        android:textSize="30sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="28sp"
                        tools:text="2018"/>

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="20sp"
                        android:textStyle="bold|italic"
                        tools:text="147"/>

                    <TextView
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:textSize="16sp"
                        tools:text="6.9"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:textSize="16sp"
                    tools:text="Overview"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/colorLightGrey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:elevation="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/powered_by_square_green"
                        android:contentDescription="@string/tmdb_branding_reference" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <TextView
                        style="@style/FooterText"
                        android:text="@string/tmdb_notice"/>
                    <TextView
                        style="@style/FooterText"
                        android:autoLink="web"
                        android:text="@string/tmdb_official_link"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_network_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_internet_connection"
        android:textColor="@color/colorWarning"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/tv_no_movie_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/movie_details_could_not_be_loaded"
        android:textColor="@color/colorWarning"
        android:visibility="gone"/>

</LinearLayout>